base -8 Camera toggle

--- a/test/websocket-test.html
+++ b/test/websocket-test.html
@@ -441,7 +441,7 @@
             try {
                 const data = await makeApiCall(
                     '/student/camera',
-                    'POST',
+                    'PATCH',
                     {
                         teacherId: currentTeacherId,
                         studentId: currentStudentId,
